[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/basic sprites/caja.png" type="Texture" id=1]
[ext_resource path="res://Actors/Box.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.3431, 22.6991 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.8677, 28.2876 )

[sub_resource type="CircleShape2D" id=3]
radius = 204.716

[node name="Box" type="RigidBody2D" groups=[
"box",
"with weight",
]]
mode = 2
can_sleep = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 1.5
one_shot = true

[node name="PushArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushArea"]
visible = false
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
show_behind_parent = true
texture = ExtResource( 1 )
texture_scale = 0.5
energy = 0.5
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="Area2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PushArea" to="." method="_on_PushArea_body_entered"]
[connection signal="body_exited" from="PushArea" to="." method="_on_PushArea_body_exited"]
